[package]
name = "zmusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21"
ureq = "2.7.1"
rodio = { version = "0.17", default-features = false, features = [
    "symphonia-all",
] }

[lib]
name = "libzmusic"
crate-type = ["cdylib"]
